--- a/Ionic/Application/www/index.html
+++ b/Ionic/Application/www/index.html
@@ -22,6 +22,11 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script>
+      function outputUpdate(val) {
+        document.querySelector('#inputIncome').value = val;
+      }
+    </script>
   </head>
   <body ng-app="starter">
     <!--
