--- a/Ionic/Application/www/index.html
+++ b/Ionic/Application/www/index.html
@@ -14,11 +14,13 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-translate-2.9.0/angular-translate.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/translation.js"></script>
     <script src="js/app.js"></script>
     <script src="js/components.js"></script>
     <script src="js/controllers.js"></script>
