--- a/Ionic/Application/www/index.html
+++ b/Ionic/Application/www/index.html
@@ -6,6 +6,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/angular-chart.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -21,6 +22,8 @@
 
     <!-- your app's js -->
     <script src="js/translation.js"></script>
+    <script src="js/Chart.min.js"></script>
+    <script src="js/angular-chart.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/components.js"></script>
     <script src="js/controllers.js"></script>
