--- a/Ionic/Application/www/index.html
+++ b/Ionic/Application/www/index.html
@@ -20,9 +20,11 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- libs -->
+    <script src="lib/chartjs/Chart.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/translation.js"></script>
-    <script src="js/Chart.min.js"></script>
     <script src="js/angular-chart.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/components.js"></script>
